--- a/app/src/main/res/layout/activity_part_practice_bear1.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear1.xml
@@ -216,5 +216,24 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageButton
+        android:id="@+id/next"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="200dp"
+        android:background="?selectableItemBackground"
+        android:onClick="onClick_next"
+        android:scaleType="fitCenter"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintTop_toBottomOf="@+id/bearfirstscore"
+        app:layout_constraintVertical_bias="0.768"
+        app:srcCompat="@android:drawable/ic_media_next" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
