--- a/app/src/main/res/layout/activity_part_practice_bear5.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear5.xml
@@ -18,6 +18,45 @@
         app:layout_constraintStart_toStartOf="@+id/pitchbutton3"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/next"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="200dp"
+        android:background="?selectableItemBackground"
+        android:onClick="onClick_next"
+        android:scaleType="fitCenter"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintTop_toBottomOf="@+id/bearfifthscore"
+        app:layout_constraintVertical_bias="0.768"
+        app:srcCompat="@android:drawable/ic_media_next" />
+
+    <ImageButton
+        android:id="@+id/last"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="200dp"
+        android:background="?selectableItemBackground"
+        android:onClick="onClick_last"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_media_previous"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintEnd_toStartOf="@+id/next"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bearfifthscore"
+        app:layout_constraintVertical_bias="0.77" />
+
     <Button
         android:id="@+id/pitchButton1"
         android:layout_width="wrap_content"
@@ -142,7 +181,7 @@
         android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text=" "
+        android:text="귀"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -158,7 +197,7 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="귀"
+        android:text="여"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -173,7 +212,7 @@
         android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="여"
+        android:text="워"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -187,7 +226,7 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="워"
+        android:text=" "
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
@@ -195,11 +234,16 @@
         app:layout_constraintTop_toBottomOf="@+id/pitchbutton8" />
 
 
+
+
+
+
     <TextView
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:text="1.0"
         android:textColor="#000000"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/highpitch"
@@ -212,7 +256,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/scdream2"
-        android:text="높아요!"
+        android:text="Too high!"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/pitchline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -234,31 +278,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:fontFamily="@font/scdream2"
-        android:text="낮아요!"
+        android:text="Too low!"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/next"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="200dp"
-        android:background="?selectableItemBackground"
-        android:onClick="onClick_next"
-        android:scaleType="fitCenter"
-        android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
-        app:layout_constraintTop_toBottomOf="@+id/bearfifthscore"
-        app:layout_constraintVertical_bias="0.768"
-        app:srcCompat="@android:drawable/ic_media_next" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
