--- a/app/src/main/res/layout/activity_part_practice_bear4.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear4.xml
@@ -8,6 +8,17 @@
     android:background="@drawable/back"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/backtochoice"
+        android:layout_width="70dp"
+        android:layout_height="51dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="@+id/bearfourthscore"
+        app:layout_constraintTop_toTopOf="@+id/bearfourthscore" />
+
     <ImageView
         android:id="@+id/bearfourthscore"
         android:layout_width="wrap_content"
