--- a/app/src/main/res/layout/activity_choice_level.xml
+++ b/app/src/main/res/layout/activity_choice_level.xml
@@ -10,9 +10,10 @@
 
     <Button
         android:id="@+id/backtochoice"
-        android:layout_width="56dp"
-        android:layout_height="58dp"
-        android:layout_marginBottom="17dp"
+        android:layout_width="43dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="2dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
@@ -21,71 +22,63 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/levellow"
+        android:id="@+id/levelhigh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="3dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
         android:fontFamily="@font/scdream2"
-        android:paddingLeft="140dp"
+        android:paddingLeft="100dp"
+        android:text="@string/high"
+        android:textSize="30dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toTopOf="@+id/levelmiddle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backtochoice" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginBottom="220dp"
+        android:background="@drawable/buttonblack"
+        app:layout_constraintBottom_toBottomOf="@+id/levellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/levelhigh" />
+
+    <Button
+        android:id="@+id/levelmiddle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="100dp"
+        android:text="@string/middle"
+        android:textSize="30dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toTopOf="@+id/levellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/levelhigh" />
+
+    <Button
+        android:id="@+id/levellow"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="100dp"
         android:text="@string/low"
         android:textSize="30dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/levelhigh" />
-
-    <Button
-        android:id="@+id/levelhigh"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="219dp"
-        android:background="?selectableItemBackground"
-        android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
-        android:fontFamily="@font/scdream2"
-        android:paddingLeft="140dp"
-        android:text="@string/high"
-        android:textSize="30dp"
-        android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toTopOf="@+id/levellow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backtochoice" />
-
-    <ImageView
-        android:layout_width="524dp"
-        android:layout_height="220dp"
-        android:background="@drawable/buttonblack"
-        app:layout_constraintBottom_toTopOf="@+id/levellow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/levelhigh"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/levelmiddle"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="218dp"
-        android:layout_marginBottom="217dp"
-        android:background="?selectableItemBackground"
-        android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
-        android:fontFamily="@font/scdream2"
-        android:paddingLeft="140dp"
-        android:text="@string/middle"
-        android:textSize="30dp"
-        android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toBottomOf="@+id/levellow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/levelhigh"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/levelmiddle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
