--- a/app/src/main/res/layout/activity_part_practice_plane2.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane2.xml
@@ -28,14 +28,13 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/playVib"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
+        app:layout_constraintTop_toTopOf="@+id/planesecondscore" />
 
     <ImageView
         android:id="@+id/planesecondscore"
@@ -43,7 +42,7 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:src="@drawable/planesecondscore"
-        app:layout_constraintStart_toStartOf="@+id/backtochoice"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -155,7 +154,7 @@
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="22dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="50sp"
@@ -198,42 +197,32 @@
     <ImageButton
         android:id="@+id/next"
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="23dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="200dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
         android:scaleType="fitCenter"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/last"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/last"
-        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
-        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
-        app:layout_constraintVertical_bias="0.768"
+        app:layout_constraintTop_toTopOf="@+id/last"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageButton
         android:id="@+id/last"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="164dp"
+        android:layout_marginBottom="163dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_last"
         android:scaleType="fitCenter"
         android:src="@android:drawable/ic_media_previous"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/pitchbutton5"
-        app:layout_constraintEnd_toStartOf="@+id/next"
-        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintBottom_toBottomOf="@+id/lowpitch"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
-        app:layout_constraintVertical_bias="0.77" />
+        app:layout_constraintTop_toBottomOf="@+id/pitchbutton5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
