--- a/app/src/main/res/layout/activity_part_practice_plane2.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane2.xml
@@ -171,8 +171,9 @@
         android:text="높아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/pitchline"
-        app:layout_constraintEnd_toStartOf="@+id/pitchTextView"
-        app:layout_constraintStart_toStartOf="@+id/pitchTextView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/pitchline"
@@ -187,42 +188,54 @@
         android:id="@+id/lowpitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_marginBottom="36dp"
         android:fontFamily="@font/scdream2"
         android:text="낮아요!"
         android:textSize="30dp"
-        app:layout_constraintStart_toStartOf="@+id/highpitch"
-        app:layout_constraintTop_toBottomOf="@+id/pitchline" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/next"
         android:layout_width="50dp"
-        android:layout_height="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="23dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="200dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
         android:scaleType="fitCenter"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="@+id/last"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/last"
+        app:layout_constraintHorizontal_bias="0.924"
+        app:layout_constraintStart_toEndOf="@+id/last"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageButton
         android:id="@+id/last"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginBottom="163dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="200dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_last"
         android:scaleType="fitCenter"
         android:src="@android:drawable/ic_media_previous"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="@+id/lowpitch"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintEnd_toStartOf="@+id/next"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pitchbutton5" />
+        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
